eeschema-gal: make sure all other Kicad apps compile after eeschema gal hacks

--- a/cvpcb/CMakeLists.txt
+++ b/cvpcb/CMakeLists.txt
@@ -7,6 +7,7 @@ add_definitions( -DCVPCB )
 
 include_directories( BEFORE ${INC_BEFORE} )
 include_directories(
+    ../include/legacy_wx
     ./dialogs
     ../3d-viewer
     ../pcbnew
@@ -149,6 +150,23 @@ target_link_libraries( cvpcb_kiface
     bitmaps
     polygon
     gal
+    legacy_wx
+    pcbcommon
+    pcad2kicadpcb
+    3d-viewer
+    common
+    bitmaps
+    polygon
+    gal
+    legacy_wx
+    pcbcommon
+    pcad2kicadpcb
+    3d-viewer
+    common
+    bitmaps
+    polygon
+    gal
+    legacy_wx
     ${wxWidgets_LIBRARIES}
     ${GDI_PLUS_LIBRARIES}
     )
