--- a/qa/CMakeLists.txt
+++ b/qa/CMakeLists.txt
@@ -14,6 +14,6 @@ endif()
 
 add_subdirectory( common )
 add_subdirectory( shape_poly_set_refactor )
-add_subdirectory( pcb_test_window )
-add_subdirectory( polygon_triangulation )
-add_subdirectory( polygon_generator )
+# add_subdirectory( pcb_test_window )
+# add_subdirectory( polygon_triangulation )
+# add_subdirectory( polygon_generator )
