--- a/cvpcb/CMakeLists.txt
+++ b/cvpcb/CMakeLists.txt
@@ -45,7 +45,7 @@ set( CVPCB_SRCS
     listbox_base.cpp
     menubar.cpp
     readwrite_dlgs.cpp
-    tool_cvpcb.cpp
+    toolbars_cvpcb.cpp
     tools/cvpcb_actions.cpp
     tools/cvpcb_control.cpp
     tools/cvpcb_selection_tool.cpp
