--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -264,6 +264,7 @@ set( COMMON_SRCS
     eda_base_frame.cpp
     eda_dde.cpp
     eda_doc.cpp
+    eda_dockart.cpp
     eda_pattern_match.cpp
     eda_size_ctrl.cpp
     env_paths.cpp
