Add filter to net selector widget.
Also fixes a bug where nets wouldn't get changed because the
pads weren't changed and so the pad nets would propagate and
wipe out the changed nets on the tracks.

Also includes warning dialogs that pad nets will be changed if the
track nets are.

Fixes: lp:1779854
* https://bugs.launchpad.net/kicad/+bug/1779854

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -447,7 +447,7 @@ set( PCB_COMMON_SRCS
     ../pcbnew/ratsnest_viewitem.cpp
     ../pcbnew/sel_layer.cpp
     ../pcbnew/zone_settings.cpp
-    widgets/widget_net_selector.cpp
+    widgets/net_selector.cpp
 )
 
 # add -DPCBNEW to compilation of these PCBNEW sources
