--- a/qa/common/CMakeLists.txt
+++ b/qa/common/CMakeLists.txt
@@ -25,9 +25,9 @@ find_package( wxWidgets 3.0.0 COMPONENTS gl aui adv html core net base xml stc R
 
 add_definitions(-DBOOST_TEST_DYN_LINK)
 
-add_executable( qa_geometry
+add_executable( qa_common
     test_module.cpp
-    test_fillet.cpp
+    geometry/test_fillet.cpp
 )
 
 include_directories(
@@ -37,13 +37,13 @@ include_directories(
     ${Boost_INCLUDE_DIR}
 )
 
-target_link_libraries( qa_geometry
+target_link_libraries( qa_common
     common
     polygon
     ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
     ${wxWidgets_LIBRARIES}
 )
 
-add_test( NAME geometry
-    COMMAND qa_geometry
+add_test( NAME common
+    COMMAND qa_common
 )
