QA: Place UTF8 tests under Boost unit tests
This transfers the old #if'd-out tests in utf8.cpp into a
proper Boost unit test in /qa (run on `make test`).

--- a/qa/common/CMakeLists.txt
+++ b/qa/common/CMakeLists.txt
@@ -27,6 +27,9 @@ add_definitions(-DBOOST_TEST_DYN_LINK)
 
 add_executable( qa_common
     test_module.cpp
+
+    test_utf8.cpp
+
     geometry/test_fillet.cpp
 )
 
