pcbnew: re-organizing connectivity
The connectivity files were unwieldy.  This separates them logically
into data, algo and items where the items classes are those that hold,
surprise, surprise, the items, lists and clusters.

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -440,6 +440,7 @@ set( PCB_COMMON_SRCS
     ../pcbnew/class_zone.cpp
     ../pcbnew/collectors.cpp
     ../pcbnew/connectivity/connectivity_algo.cpp
+    ../pcbnew/connectivity/connectivity_items.cpp
     ../pcbnew/connectivity/connectivity_data.cpp
     ../pcbnew/convert_drawsegment_list_to_polygon.cpp
     ../pcbnew/drc_item.cpp
