--- a/pcbnew/connectivity/CMakeLists.txt
+++ b/pcbnew/connectivity/CMakeLists.txt
@@ -11,6 +11,7 @@ include_directories(
 set( PCBNEW_CONN_SRCS
     connectivity_algo.cpp
     connectivity_data.cpp
+    connectivity_items.cpp
 )
 
 add_library( connectivity STATIC ${PCBNEW_CONN_SRCS} )
