Disallow variable length arrays
This is a gcc/clang extension, not standard C++

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -209,6 +209,13 @@ if( CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang" )
     if(COMPILER_SUPPORTS_WSUGGEST_OVERRIDE)
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wsuggest-override")
     endif()
+
+    CHECK_CXX_COMPILER_FLAG("-Wvla" COMPILER_SUPPORTS_WVLA)
+
+    if(COMPILER_SUPPORTS_WVLA)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror=vla")
+    endif()
+
 endif()
 
 
