Open project folder in host OS: refinements.
Remove 2 png files that should not be is trunk.

--- a/bitmaps_png/CMakeLists.txt
+++ b/bitmaps_png/CMakeLists.txt
@@ -215,6 +215,7 @@ set( BMAPS_MID
     delete_track
     delete
     directory
+    directory_browser
     display_options
     distribute_horizontal
     distribute_vertical
